[package]
name = "windows_test"
version = "0.1.0"
edition = "2021"
# build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
encoding = "0.2.33"
device_query = "1.0.0"

[dependencies.windows]
version = "0.39.0"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_TaskScheduler",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_SystemInformation", 
    "Win32_System_Diagnostics_Debug"
]
